--- a/oralock-fd/src/assets/i18n/en.json
+++ b/oralock-fd/src/assets/i18n/en.json
@@ -55,6 +55,7 @@
     "lang.en": "English",
     "langMenu.hint": "Select language",
     "ref_its": "Ref. code",
+    "ref": "Ref.",
     "page.items": "Items per page:",
     "page.next": "Next page",
     "page.previous": "Previous page",
