--- a/oralock-fd/src/assets/i18n/es.json
+++ b/oralock-fd/src/assets/i18n/es.json
@@ -55,6 +55,7 @@
     "lang.en": "Inglés",
     "langMenu.hint": "Seleccionar idioma",
     "ref_its": "Código ref.",
+    "ref": "Ref.",
     "page.items": "Filas por página:",
     "page.next": "Página siguiente",
     "page.previous": "Página anterior",
