--- a/oralock-fd/src/assets/i18n/va.json
+++ b/oralock-fd/src/assets/i18n/va.json
@@ -55,6 +55,7 @@
     "lang.en": "Anglès",
     "langMenu.hint": "Seleccionar idioma",
     "ref_its": "Codi ref.",
+    "ref": "Ref.",
     "page.items": "Files per pàgina:",
     "page.next": "Pàgina següent",
     "page.previous": "Pàgina anterior",
