--- a/oralock-fd/src/assets/i18n/en.json
+++ b/oralock-fd/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
     "ok": "Ok",
     "cancel": "Cancel",
     "confirm": "Confirm",
-    "save": "Save",
+    "save": "Save",    
     "close": "Close",
     "login": "Log in",
     "error": "Error",
@@ -31,6 +31,7 @@
     "password.mandatory": "Password is mandatory",
     "date": "Date",
     "comment": "Comment",
+    "btn.clean": "Clear",
     "btn.unlock": "Unlock",
     "btn.lock": "Lock",
     "btn.buscar": "Look up",
@@ -40,6 +41,7 @@
     "btn.disable": "Disable",    
     "my.locks": "My locks",
     "locks": "Locks",
+    "total.locks": "Total Locks: {{locks}} Total Compilations: {{compiles}} Total Fails: {{fails}}",
     "unlock.object": "Unlock object",
     "lock.object": "Lock object",
     "unlock.question": "Do you want to unlock the object {{owner}}.{{name}}?",
