--- a/oralock-fd/src/assets/i18n/es.json
+++ b/oralock-fd/src/assets/i18n/es.json
@@ -5,7 +5,7 @@
     "ok": "Aceptar",
     "cancel": "Cancelar",
     "confirm": "Confirmar",
-    "save": "Guardar",
+    "save": "Guardar",    
     "close": "Cerrar",
     "login": "Entrar",
     "error": "Error",
@@ -31,6 +31,7 @@
     "password.mandatory": "La contraseña es obligatoria",
     "date": "Fecha",
     "comment": "Comentario",
+    "btn.clean": "Limpiar",
     "btn.unlock": "Desbloquear",
     "btn.lock": "Bloquear",
     "btn.buscar": "Buscar",
@@ -40,6 +41,7 @@
     "btn.disable": "Desactivar",
     "my.locks": "Mis locks",
     "locks": "Bloqueos",
+    "total.locks": "Total Bloqueos: {{locks}} Total Compilaciones: {{compiles}} Total Fallos: {{fails}}",
     "unlock.object": "Desbloquear objeto",
     "lock.object": "Bloquear objeto",
     "unlock.question": "¿Desea desbloquear el objeto {{owner}}.{{name}}?",
