--- a/oralock-fd/src/assets/i18n/va.json
+++ b/oralock-fd/src/assets/i18n/va.json
@@ -5,7 +5,7 @@
     "ok": "Acceptar",
     "cancel": "Cancel·lar",    
     "confirm": "Confirmar",
-    "save": "Guardar",
+    "save": "Guardar",    
     "close": "Tancar",
     "login": "Entrar",
     "error": "Error",
@@ -31,6 +31,7 @@
     "password.mandatory": "La contrasenya és obligatòria",
     "date": "Data",
     "comment": "Comentari",
+    "btn.clean": "Netejar",
     "btn.unlock": "Desbloquejar",
     "btn.lock": "Bloquejar", 
     "btn.new": "Nou", 
@@ -40,6 +41,7 @@
     "btn.disable": "Desactivar",
     "my.locks": "Els meus bloquejos",
     "locks": "Bloquejos",
+    "total.locks": "Total Bloquejos: {{locks}} Total Compilacions: {{compiles}} Total Falladess: {{fails}}",
     "unlock.object": "Desbloquejar objecte",
     "lock.object": "Bloquejar objecte",
     "unlock.question": "Desitja desbloquejar l'objecte {{owner}}.{{name}}?",
