--- a/oralock-bg/src/main/resources/messages_ca.properties
+++ b/oralock-bg/src/main/resources/messages_ca.properties
@@ -6,3 +6,6 @@ error.no-allowed-modify-options=No té permisos per a modificar les opcions del s
 error.user-no-db=%s no està registrat com a usuari de Oracle db
 error.schema-with-locks=L'esquema %s posseeix objectes bloquejats
 error.type-with-locks=Existeixen objectes bloquejats de tipus %s
+error.login.connection=Error en la conexió a Oracle: %s
+error.login.user-not-registered=Usuari no registrat
+error.login.user-disabled=Usuari no activu
