--- a/oralock-bg/src/main/resources/messages_en.properties
+++ b/oralock-bg/src/main/resources/messages_en.properties
@@ -6,3 +6,6 @@ error.no-allowed-modify-options=You do not have permissions to modify system opt
 error.user-no-db=%s is not registered as an oracle db user
 error.schema-with-locks=Schema %s has locked objects
 error.type-with-locks=There are locked objects of type %s
+error.login.connection=Oracle connection error: %s
+error.login.user-not-registered=User not registered
+error.login.user-disabled=User not active
