--- a/oralock-bg/src/main/resources/messages_es.properties
+++ b/oralock-bg/src/main/resources/messages_es.properties
@@ -6,3 +6,6 @@ error.no-allowed-modify-options=No tiene permisos para modificar las opciones de
 error.user-no-db=%s no está registrado como usuario de Oracle db
 error.schema-with-locks=El esquema %s posee objetos bloqueados
 error.type-with-locks=Existen objetos bloqueados de tipo %s
+error.login.connection=Error en la conexión a Oracle: %s
+error.login.user-not-registered=Usuario no registrado
+error.login.user-disabled=Usuario no activo
