--- a/oralock-fd/src/assets/i18n/es.json
+++ b/oralock-fd/src/assets/i18n/es.json
@@ -39,6 +39,8 @@
     "btn.edit": "Editar",
     "btn.enable": "Activar",
     "btn.disable": "Desactivar",
+    "btn.actions": "Acciones",
+    "btn.back": "Volver",
     "my.locks": "Mis locks",
     "locks": "Bloqueos",
     "total.locks": "Total Bloqueos: {{locks}} Total Compilaciones: {{compiles}} Total Fallos: {{fails}}",
@@ -101,9 +103,10 @@
     "locked.by": "Bloqueado por",
     "locked.by-user": "Bloqueado por {{user}}",
     "options.title": "Opciones",
-    "options.schemas.support": "Esquemas registrados",
-    "options.types.support": "Tipos soportados",
-    "options.default.lang": "Idioma por defecto",
+    "options.schemas.support": "Esquemas",
+    "options.types.support": "Tipos",
+    "options.ops.support": "Operaciones",
+    "options.default.lang": "Idioma",
     "options.save.ok": "Opciones guardadas con éxito",
     "options.save.error": "Error al guardar las opciones: {{error}}",
     "lapse.days": "hace {{days}} días, {{hours}} horas y {{minutes}} minutos",
@@ -119,5 +122,6 @@
     "export.xls": "Exportar a un archivo Excel",
     "options.schemas": "Esquemas registrados en el sistema",
     "options.types": "Tipos de objeto soportados por el sistema",
+    "options.ops": "Operaciones registradas en el sistema",
     "options.lang": "Idioma de los mensajes del sistema"
 }
