--- a/oralock-bg/src/main/resources/messages_ca.properties
+++ b/oralock-bg/src/main/resources/messages_ca.properties
@@ -9,3 +9,4 @@ error.type-with-locks=Existeixen objectes bloquejats de tipus %s
 error.login.connection=Error en la conexió a Oracle: %s
 error.login.user-not-registered=Usuari no registrat
 error.login.user-disabled=Usuari no activu
+error.lock.type.no-active=No es permet el bloqueig del tipus %s
