--- a/oralock-bg/src/main/resources/messages_en.properties
+++ b/oralock-bg/src/main/resources/messages_en.properties
@@ -9,3 +9,4 @@ error.type-with-locks=There are locked objects of type %s
 error.login.connection=Oracle connection error: %s
 error.login.user-not-registered=User not registered
 error.login.user-disabled=User not active
+error.lock.type.no-active=Locking type %s is not allowed
