--- a/oralock-bg/src/main/resources/messages_es.properties
+++ b/oralock-bg/src/main/resources/messages_es.properties
@@ -9,3 +9,4 @@ error.type-with-locks=Existen objetos bloqueados de tipo %s
 error.login.connection=Error en la conexión a Oracle: %s
 error.login.user-not-registered=Usuario no registrado
 error.login.user-disabled=Usuario no activo
+error.lock.type.no-active=No se permite el bloqueo del tipo %s 
